# onlineclust

./: README.md
online_clustering/: CMakeLists.txt  README  onlineclust.files
online_clustering/3D_point_cloud/: CMakeLists.txt
online_clustering/3d_point_cloud/: CMakeLists.txt
online_clustering/app/clustering/: clust_test  out_delete.dot  out_insert.dot  seg.data
online_clustering/app/data/: kitti.0.pcd  kitti.1.pcd  kitti.10.pcd  kitti.101.pcd  kitti.102.pcd  kitti.105.pcd  kitti.107.pcd  kitti.12.pcd  kitti.14.pcd  kitti.15.pcd  kitti.16.pcd  kitti.28.pcd  kitti.29.pcd  kitti.30.pcd  kitti.31.pcd  kitti.32.pcd  kitti.36.pcd  kitti.41.pcd  kitti.42.pcd  kitti.48.pcd  kitti.50.pcd  kitti.51.pcd  kitti.55.pcd  kitti.59.pcd  kitti.60.pcd  kitti.66.pcd  kitti.68.pcd  kitti.7.pcd  kitti.73.pcd  kitti.74.pcd  kitti.75.pcd  kitti.76.pcd  kitti.78.pcd  kitti.79.pcd  kitti.8.pcd  kitti.80.pcd  kitti.84.pcd  kitti.88.pcd  kitti.91.pcd  kitti.95.pcd  (+3 more)
online_clustering/app/dataproc/: dataproc_test
online_clustering/app/hmp/: hmp_test  omp_test
online_clustering/app/pcloud/: pcloud_2rgbd_test  pcloud_vis_test
online_clustering/app/sys/: output.ps  sys
online_clustering/clustering/: CMakeLists.txt
online_clustering/clustering/include/: Cluster.h  ClusterList.h  KernelOSC.h  Mesh.h  OnlineStarClustering.h  Vertex.h
online_clustering/clustering/src/: CMakeLists.txt  Cluster.cpp  ClusterList.cpp  Mesh.cpp  OnlineStarClustering.cpp  Vertex.cpp
online_clustering/clustering/src/tba/: offobj.cc  tmesh.cc
online_clustering/cmake/: FindOctoMap.cmake  FindPoco.cmake  FindRemoteVR.cmake  FindStarClust.cmake  FindZeroCIce.cmake
online_clustering/data_proc/: CMakeLists.txt
online_clustering/data_proc/include/: data_proc.h
online_clustering/data_proc/src/: data_proc.cpp
online_clustering/gplib/: CMakeLists.txt  Doxyfile.in
online_clustering/gplib/config/: gplib.conf
online_clustering/gplib/include/GPlib/: GP_Base.hh  GP_BinaryClassification.hh  GP_BinaryClassificationEP.hh  GP_BinaryClassificationIVM.hh  GP_BinaryClassificationMI.hh  GP_BinaryClassificationMIApprox.hh  GP_Classification.hh  GP_Constants.hh  GP_CovarianceFunction.hh  GP_DataReader.hh  GP_DataSet.hh  GP_Evaluation.hh  GP_Exception.hh  GP_Histogram.hh  GP_InputParams.hh  GP_Matrix.hh  GP_ObjectiveFunction.hh  GP_Optimizer.hh  GP_OptimizerCG.hh  GP_PolyadicClassification.hh  GP_PolyadicClassificationEP.hh  GP_PolyadicClassificationIVM.hh  GP_Regression.hh  GP_RegressionIVM.hh  GP_SigmoidFunction.hh  GP_SparseRegression.hh  GP_SquaredExponentialWght.hh  GP_Tensor.hh  GP_UniversalDataReader.hh  GP_Vector.hh  KernelPCA.hh  SVM_Binary.hh
online_clustering/gplib/src/: GP_Evaluation.cc  GP_Exception.cc  GP_Histogram.cc  GP_InputParams.cc  GP_Matrix.cc  GP_Optimizer.cc  GP_OptimizerCG.cc  GP_SigmoidFunction.cc  GP_Tensor.cc  GP_Vector.cc
online_clustering/gplib/test/: bayes_opt.cc  gp_active_learning.cc  gp_dense_multi.cc  gp_dense_predict.cc  gp_dense_train.cc  gp_epmulti.cc  gp_eptest.cc  gp_eptest_wght.cc  gp_ivm_multi.cc  gp_ivm_train.cc  gp_ivm_train_multi.cc  gp_ivminctest.cc  gp_ivmtest.cc  gp_make_data.cc  gp_matrixtest.cc  gp_mi_predict.cc  gp_mitest.cc  gp_predict.cc  gp_predict_multi.cc  gp_regression_train.cc  gp_simpleclassf.cc  gp_train.cc  gp_train_multi.cc  ivm_wght_test.cc  kPCA.cc  mc.m  regr_wght_test.cc  run_al.py
online_clustering/hmp/: CMakeLists.txt
online_clustering/hmp/include/: hmp.h  ksvd.h  omp.h
online_clustering/hmp/src/: helper.cpp  hmp.cpp  omp.cpp
online_clustering/ompbox/: blascompat32.h  engine.h  mex.h  mwservices.h  ompcore.c  ompcore.h  ompprof.c  tmwtypes.h
online_clustering/ompbox/backup/: lapack.h  main.cpp  mat.h  matrix.h  mclbase.h  mclmcr.h  mcr.h  mex.h  mwutil.h  ompcore.c
online_clustering/ompbox/test/: blas.h  main.cpp  matrix.h  mclmcrrt.h  mex.h
online_clustering/pcloud/: CMakeLists.txt
online_clustering/pcloud/include/: .#3d_point_cloud.hpp  pcloud.h
online_clustering/pcloud/src/: pcloud.cpp
online_clustering/test/: CMakeLists.txt
online_clustering/test/clustering/: clust_test.cpp  fileconvert.cc  mesh_test.cc
online_clustering/test/data/: kitti.0.pcd~  kitti.100.pcd  kitti.104.pcd  kitti.106.pcd  kitti.17.pcd  kitti.18.pcd  kitti.19.pcd  kitti.2.pcd  kitti.20.pcd  kitti.25.pcd  kitti.26.pcd  kitti.35.pcd  kitti.38.pcd  kitti.4.pcd  kitti.43.pcd  kitti.44.pcd  kitti.47.pcd  kitti.49.pcd  kitti.5.pcd  kitti.53.pcd  kitti.54.pcd  kitti.56.pcd  kitti.58.pcd  kitti.6.pcd  kitti.65.pcd  kitti.67.pcd  kitti.69.pcd  kitti.70.pcd  kitti.71.pcd  kitti.72.pcd  kitti.81.pcd  kitti.86.pcd  kitti.87.pcd  kitti.89.pcd  kitti.9.pcd  kitti.92.pcd  kitti.93.pcd
online_clustering/test/data_proc/: dataproc_test.cpp
online_clustering/test/exe/: omp_test  online_clust_dataproc_test  pc2ri  vis_pc2ri
online_clustering/test/exe/clustering/: clust_test
online_clustering/test/exe/data/: cloud_viewer  kitti.103.pcd  kitti.11.pcd  kitti.13.pcd  kitti.21.pcd  kitti.22.pcd  kitti.23.pcd  kitti.24.pcd  kitti.27.pcd  kitti.3.pcd  kitti.33.pcd  kitti.34.pcd  kitti.37.pcd  kitti.39.pcd  kitti.40.pcd  kitti.45.pcd  kitti.46.pcd  kitti.52.pcd  kitti.57.pcd  kitti.61.pcd  kitti.62.pcd  kitti.63.pcd  kitti.64.pcd  kitti.77.pcd  kitti.82.pcd  kitti.83.pcd  kitti.85.pcd  kitti.90.pcd  kitti.94.pcd  kitti.99.pcd
online_clustering/test/exe/dataproc/: dataproc_test
online_clustering/test/exe/hmp/: gmon.out  hmp_test  omp_test
online_clustering/test/exe/hmp/CoSaMP_OMP/: test.m
online_clustering/test/exe/sys/: sys
online_clustering/test/hmp/: hmp_test.cpp  omp_test.cpp
online_clustering/test/pcloud/: pcloud_2rgbd_test.cpp  pcloud_rgbd_test.cpp  pcloud_vis_test.cpp
online_clustering/test/sys/: main.cpp
